# reflectapi-demo

./: Cargo.toml  build-and-codegen.sh  reflectapi.json
client/: generated.ts  index.ts  match.ts  package-lock.json
src/: lib.rs  lib.rs.bak  main.rs  redoc.html
xtask/: Cargo.toml
xtask/src/: main.rs
